GENERAL - making performance test executable jar file