@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>pl.bristleback</groupId>
@@ -45,77 +45,32 @@
 
   <profiles>
     <profile>
-      <id>server</id>
+      <id>clientJar</id>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
             <configuration>
-              <executable>java</executable>
-              <arguments>
-                <argument>-showversion</argument>
-                <argument>-Xmx512m</argument>
-                <argument>-Xms512m</argument>
-                <argument>-Xmn256m</argument>
-                <argument>-XX:+PrintCommandLineFlags</argument>
-                <argument>-verbose:gc</argument>
-                <!--<argument>-XX:+PrintGCDetails</argument>-->
-                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
-                <argument>-XX:+UseParallelOldGC</argument>
-                <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
-                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
-                <!--<argument>-XX:+UseG1GC</argument>-->
-                <argument>-cp</argument>
-                <classpath />
-                <argument>com.example.websocket.Main</argument>
-                <argument>8080</argument>
-              </arguments>
+              <archive>
+                <manifest>
+                  <addClasspath>true</addClasspath>
+                  <mainClass>pl.bristleback.performance.ChatLoadClient</mainClass>
+                </manifest>
+              </archive>
             </configuration>
           </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>client</id>
-      <build>
-        <plugins>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
+            <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
-              <executable>java</executable>
-              <arguments>
-                <argument>-showversion</argument>
-                <argument>-Xmx1024m</argument>
-                <argument>-Xms1024m</argument>
-                <argument>-Xmn512m</argument>
-                <argument>-XX:+PrintCommandLineFlags</argument>
-                <argument>-verbose:gc</argument>
-                <!--<argument>-XX:+PrintGCDetails</argument>-->
-                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
-                <argument>-XX:+UseParallelOldGC</argument>
-                <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
-                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
-                <!--<argument>-XX:+UseG1GC</argument>-->
-                <argument>-cp</argument>
-                <classpath />
-                <argument>com.example.websocket.ChatLoadClient</argument>
-                <argument>localhost</argument>
-                <argument>8080</argument>
-                <argument>100</argument>
-                <argument>100000</argument>
-              </arguments>
-<!--
-              <systemProperties>
-                <systemProperty>
-                  <key>org.eclipse.jetty.util.log.DEBUG</key>
-                  <value>true</value>
-                </systemProperty>
-              </systemProperties>
--->
+              <archive>
+                <manifest>
+                  <mainClass>pl.bristleback.performance.ChatLoadClient</mainClass>
+                </manifest>
+              </archive>
+              <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
             </configuration>
           </plugin>
         </plugins>
